edit pura gunung lebah

--- a/src/index.jade
+++ b/src/index.jade
@@ -5,177 +5,52 @@ html
   body.classic
     include menu
     article
-      Section
-        h1 Tari Kecak Ubud
-        img(src="images/Tari-Kecak-Ubud.jpg" height = 300 width = 600)
-
-      Section
-        P Objek wisata Ubud sangat terkenal akan wisata air atau yang dikenal dengan nama Ayung Rafting Ubuddan wisata kesenian dan salah satunya adalah seni tari Kecak Bali. Banyak wisatawan yang wisata ke Ubud Bali, tidak merasa lengkap apabila tidak menononton pertujukan tari kecak Ubud. Tentunya tidak akan susah buat wisatawan untuk mendapatkan kesempatan menonton tari yang terkadang disebut dengan nama tari kecak api Ubud.
 
       section
-         h3 Jadwal & Harga Tiket Tari Kecak Ubud
-         p Jika anda ingin nonton tari kecak api di Ubud, pementasan tarian kecak hanya dilakukan pada saat malam hari. Pertunjukan tari kecak Ubud, biasanya dimulai pada jam 19:00. Di Ubud ada dua tempat terkenal untuk menonton tari kecak. Tempat pertujukan tari kecak Ubud dipentaskan antara lain di Pura Dalem Ubud dan Padang Tegal Kaja Ubud. Mohon dicatat, tidak setiap hari dipentaskan tarian kecak di Pura Dalem Ubud dan Padang Tegal Kaja Ubud. Mohon lihat jadwal di bawah, untuk kepastian tempat pementasan, harga tiket dan jam pementasan tarian kecak di Ubud.
-      
+        h1 Pura Gunung Lebah
+        img.big(src="images/PGL.jpg" height = 250 width = 600)
 
-      Section
-         h3 Hari Minggu
-         table.zebra-table
-           tr(align='left')
-             td Lokasi Pentas
-             td Jam
-             td Oleh 
-             td Harga Tiket
-           tr(align='left') 
-             td Padang Tegal Kaja
-             td 19:00
-             td Trene Jenggala
-             td Rp. 75.000,-
-           
-           tr(align='left')
-             td Pura Batukaru
-             td 19:30
-             td Desa Adat Sambahan 
-             td Rp. 75.000,-
-
-      Section
-         h3 Hari Senin
-         table.zebra-table
-           tr(align='left')
-             td Lokasi Pentas
-             td Jam
-             td Oleh 
-             td Harga Tiket
-           tr(align='left') 
-             td Desa Junjungan
-             td 18:30
-             td Desa Adat Junjungan
-             td Rp. 75.000,-
-           tr(align='left')
-             td Pura Dalem Ubud
-             td 19:30
-             td Adat Ubud Kaja
-             td Rp. 80.000,-
-
-      Section
-         h3 Hari Selasa
-         table.zebra-table
-           tr(align='left')
-             td Lokasi Pentas
-             td Jam
-             td Oleh 
-             td Harga Tiket
-           tr(align='left') 
-             td Jaba Pura Taman Sari
-             td 19:00
-             td Sandhi Suara
-             td Rp. 75.000,-
-
-      Section
-         h3 Hari Rabu
-         table.zebra-table
-           tr(align='left')
-             td Lokasi Pentas
-             td Jam
-             td Oleh 
-             td Harga Tiket
-           tr(align='left') 
-             td Padang Tegal Kaja
-             td 19:00
-             td Trene Jenggala
-             td Rp. 75.000,-
-           tr(align='left') 
-             td Pura Dalem Taman Kaja
-             td 19:30
-             td Desa Adat Taman Kaja
-             td Rp. 75.000,-
-           tr(align='left') 
-             td Pura Batu Karu
-             td 19:30
-             td Desa Adat Ubud Tengah (Penari Wanita)
-             td Rp. 80.000,-
-
-      Section
-         h3 Hari Kamis
-         table.zebra-table
-           tr(align='left')
-             td Lokasi Pentas
-             td Jam
-             td Oleh 
-             td Harga Tiket
-           tr(align='left') 
-             td Puri Agung Peliatan
-             td 18:45
-             td Semara Madya
-             td Rp. 75.000,- / Orang
-           tr(align='left') 
-             td Puri Jaba Pura Taman Sari
-             td 19:30
-             td Sandhi Suara
-             td Rp. 75.000,- / Orang
-           tr(align='left') 
-             td Pura Batu Karu
-             td 19:30
-             td Desa Adat Sambahan
-             td Rp. 75.000,- / Orang
-
-      Section
-         h3 Hari Jumat
-         table.zebra-table
-           tr(align='left')
-             td Lokasi Pentas
-             td Jam
-             td Oleh 
-             td Harga Tiket
-           tr(align='left') 
-             td Pura Padang Kertha
-             td 19:00
-             td Padang Subadra
-             td Rp. 75.000,-
-           tr(align='left') 
-             td Pura Dalem Ubud
-             td 19:30
-             td Desa Adat Ubud Kaja
-             td Rp. 80.000,-
-
-      Section
-         h3 Hari Sabtu
-         table.zebra-table
-           tr(align='left')
-             td Lokasi Pentas
-             td Jam
-             td Oleh 
-             td Harga Tiket
-           tr(align='left') 
-             td Padang Tegal Kaja
-             td 19:00
-             td Trene Jenggala
-             td Rp. 75.000,-
-           tr(align='left') 
-             td Pura Dalem Taman Kaja
-             td 19:30
-             td Desa Adat Taman Kaja
-             td Rp. 75.000,-
-
-      Section
-        p Selain jadwal rutin dari tari kecak Ubud diatas, ada jadwal tari kecak lain yang hanya diadakan pada saat bulan purnama. Tempat pementasan pada saat bulan purnama adanya di Museum Arma Ubud, jadwal pentas pada jam 18:45, dengan harga tiket Rp. 100.000.
-        h3 Mohon dicatat, harga tiket dapat berubah sewaktu-waktu.
+      section        
+        p Keberadaan pura di Bali memiliki daya tarik bagi wisatawan karena keunikan, sejarah dan nilai religiusnya. Hal ini membuat pura menjadi salah satu tujuan wisatawan saat berlibur di Bali, selain tempat umat Hindu sembahyang. Wisatawan mancanegara dan wisatawan domestik selalu menjadwalkan liburan mereka saat di Bali untuk wisata ke pura. Salah satu pura yang ada di tempat wisata Ubud yang layak anda kunjungi saat di Bali adalah Pura Pura Gunung Lebah.
 
       section
-        h3 Gambaran Tari Kecak Api Ubud di Pura Uluwatu
-        img(src="images/tari-kecak-di-pura-uluwatu.jpg" height = 300 width = 600)
+        p Lokasi dari pura Gunung Lebah berada di bawah jembatan dari sungai Campuhan Ubud. Melihat dari lokasinya yang berada di bawah Jembatan sungai Campuhan Ubud, termasuk lokasi pura yang berbeda dari biasanya. Pura ini termasuk dalam kategori pura Kahyangan Jagat,yang artinya semua umat Hindu dapat bersembahyang di pura Gunung Lebah.
 
-      Section
-        p Untuk mencari lokasi dari tiap-tiap pementasan dari tarian kecak di Ubud, tentunya bagi anda yang tidak terlalu faham akan jalan-jalan di Ubud, maka akan kesulitan. Selain itu, jika anda memutuskan membawa kendaraan sendiri, untuk mencari tempat parkir di kawasan objek wisata Ubud, akan sangat susah. Ini dikarenakan sangat jarang tersedia lahan parkir dan sebagian besar, orang parkir dipinggir jalan dan lebih cendrung penuh dan susah untuk mencari.
+      section
+        h3 Sejarah Pura Gunung Lebah Campuhan Ubud Bali
+        p  Asal usul pura Gunung Lebah dibangun pada abad ke 8 oleh seorang pendeta dari India. Pendeta ini bernama Rsi Markandeya, salah satu pendeta yang banyak mendirikan pura di Bali dan salah satunya pura terbesar di Bali, pura Besakih. Pendirian pura ini awal mulanya, Rsi Markandeya merasa adanya kekuatan magis dari lembah sungai Campuhan Ubud.
 
-      Section
-        p Oleh sebab itu, jika anda berencana wisata ke Ubud dan memutuskan untuk menonton tari kecak api di Ubud, sebaiknya menggunakan jasa sewa mobil + driver di Bali. Dengan cara sewa mobil di Bali dengan supir, anda tidak perlu susah untuk mencari lokasi pementasan dan tempat parkir mobil.
+      section
+        p Karena adanya kekuatan magis di lembah sungai Campuhan, setelah beliau kembali dari perjalanan mendirikan pura di kaki Gunung Agung (pura Besakih). Beliau mendirikan pura di lembah sungai Campuhan, yang pada awalnya di gunakan sebagai tempat meditasi. Sejarah pura Gunung Lebah sangat terkait dengan nama desa wisata di Bali yang saat ini sangat terkenal ke mancanegara yaitu Ubud.
 
-      Section
-        p Selain di Ubud, tempat pementasan tarian kecak yang paling populer adalah di pura Uluwatu. Kenapa tarian kecak di Pura Uluwatu diminati oleh wisatawan? Hal ini dikarenakan pada saat menonton tari kecak di Uluwatu, wisatawan dapat menikmati matahari terbenam, sebagai latar belakang.
+
+      section
+        p Awal terbentuknya desa Ubud dimulai dari didirikannya pemukiman penduduk di dekat pura Gunung Lebah. Karena di daerah sungai Campuhan banyak terdapat jenis tanaman yang dapat digunakan sebagai obat, Maka desa ini disebut Ubud yang berasal dari kata Ubad, artinya Obat.
+
+      section
+        h2 Asal Usul Nama Pura
+        p Nama dari Pura Gunung Lebah, berasal dari gunung yang artinya bukit sedangkan lebah artinya lembah. Jadi arti nama dari pura ini adalah bukit kecil yang anda di lembah sungai Campuhan Ubud. Bukit kecil yang ada di lembah sungai Campuhan adalah pertemuan dua arus sungai, yaitu arus sungai Oos yang berasal dari kata Usada (bahasa halus Bali untuk obat) dan arus sungai Cerik (sungai kecil).
+
+      section
+        p Pura Gunung Lebah dikelilingi oleh pepohonan yang sangat rimbun dan suasananya sangat tenang, karena itu pura ini digunakan sebagai tempat meditasi. Suasana asri, indahnya arsitektur pura serta lokasinya dekat dengan tempat wisata di Ubud, maka pura ini sangat disukai wisatawan asing untuk berkunjung.
+
+      section
+        p Dewa yang dipuja di Pura ini adalah Dewa Danuring Gunung Batur dan pura ini memiliki peran dalam penyelenggaraan upacara pemberisihan alam yang diadakan setiap 100 tahun. Setiap diadakannya upacara piodalan (upacara reguler) di pura ini, akan dipentaskan kesenian tari Calonarang pura Gunung Lebah. 
+
+      section
+        img(src="images/Pura-Gunung-Lebah-Bali.jpg" height=300 width=600)
+
+      section
+        h2 Cara Terbaik Wisata Ke Pura Gunung Lebah &#45 Tempat Wisata Ubud
+
+      section
+        p Saat anda wisata di Bali dan menginap di Ubud, maka menggunakan taksi salah satu cara terbaik untuk berkunjung ke pura ini. Lalu jika anda tidak menginap di Ubud saat wisata di Bali, maka menggunakan taksi bukanlah pilihan yang tepat. Karena biaya transfortasi akan menjadi mahal.
+        p Untuk wisata di Ubud, bagi yang tidak menginap di Ubud, menggunakan jasa sewa mobil + driver di Bali adalah cara terbaik. Karena driver anda akan menunggu dan anda tidak membayar berdasarkan argo tapi durasi pemakaian. Selain itu, tidak perlu memikirkan akan mencari tempat parkir.
+
+      section
+        p Kelebihan lain mengunakan jasa sewa mobil plus sopir di Bali, selain biaya yang lebih murah serta durasi pemakaian yang lebih lama. Selama waktu penggunaan, anda dapat mengunjungi tempat wisata di Ubud yang lain, seperti Monkey Forest Ubud.
 
    include footer
-
-
 
 
 
